tests/fail/match_range_space_err.tk
fn main() -> i32 {
    auto x = 5
    match x {
        0..=10 => {
            return 1
        }
        default => {
            return 0
        }
    }
}
