tests/fail/match_range_space_err.stderr
error[E01138]: Range operators '..<' and '..=' must be surrounded by spaces
 --> tests/fail/match_range_space_err.tk:4:10
   |
 4 |         0..=10 => {
   |          ^
error[E01172]: Expected expression
 --> tests/fail/match_range_space_err.tk:7:9
   |
 7 |         default => {
   |         ^
